--- a/learnings.ipynb
+++ b/learnings.ipynb
@@ -5,7 +5,7 @@
    "id": "ea12200b",
    "metadata": {},
    "source": [
-    "## Everything I learned while Building project-1"
+    "## Things I learned while Building project-1"
    ]
   },
   {
